--- a/ObjetosII/.classpath
+++ b/ObjetosII/.classpath
@@ -5,6 +5,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="tp.uml.src"/>
+	<classpathentry kind="src" path="tp.uml.test"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
